--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -3,13 +3,18 @@
     display: inline-block;
     width: 100%;
     overflow: hidden;
+    margin-top: -200px;
+    margin-bottom: -200px;
 }
 
-
+.barplay__main-img {
+    overflow: hidden;
+    margin-bottom: -150px;
+}
 
 .barplay__logo {
     position: absolute;
     z-index: 1;
     top: 40%;
-    left: 30%;
+    left: 32%;
 }
