--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,33 +4,48 @@
     position: fixed;
     z-index: 2;
     color: aliceblue;
-    
+    height: 3rem;
+    margin: 1rem;
 }
 
 .navbar_social-media ul {
     display: flex;
-    font-size: 2rem;
+    font-size: 1.5rem;
     list-style: none;
-    margin: 2rem;
+    margin-right: 1.5rem;
+    align-items: center;
+    justify-content: center;
 
 }
 
 .navbar_social-media li {
-    margin: 1rem;
+    margin-right: 2rem;
+    justify-content: center;
+    align-items: center;
+    margin-top: -13px;
+
 }
+
+.navbar_social-media li:hover {
+    color: aqua;
+    cursor: pointer;
+    margin-bottom: -4px;
+}
+
 
 .barplay__navbar-links{
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 25rem;
     font-size: 1.2rem;
 
     list-style: none;
 }
 
 .barplay__navbar-links li {
-    margin-right: 2.5rem;
+    margin-right: 3.5rem;
 }
 
 
@@ -38,3 +53,13 @@
     font-weight: 800;
 }
 
+.barplay__navbar-btn {
+    background-color: #A62626;
+    border: none;
+    color: aliceblue;
+    font-size: 18px;
+    font-weight: 700;
+    margin-right: 50px;
+    padding: 10px 20px 10px 20px;
+    border-radius: 5px;
+}
