--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -50,21 +50,40 @@
 
 }
 
+.barplay__navbar-links li a {
+  text-decoration: none;
+  color: white; /* Set your desired link color */
+  position: relative;
+}
+
+.barplay__navbar-links li a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -3px; /* Adjust this value to control the distance between text and underline */
+  background-color: whitesmoke; /* Set your desired underline color */
+  transform: scaleX(0);
+  transform-origin: center;
+  transition: transform 0.3s ease; /* Adding a transition to the transform property */
+}
+
+.barplay__navbar-links li a:hover::before {
+  transform: scaleX(1); }
 
 .barplay__navbar-links li:nth-child(2) {
     cursor: pointer;
     margin-bottom: 0px;
+    text-decoration: none;
 }
 
-.barplay__navbar-links li:nth-child(2):hover {
-    text-decoration: underline;
-}
 
  #barplay-joensuu{
     display: flex;
     align-items: center;
     justify-content:center ;
     margin-top: -18px;
+    text-decoration: none;
 }
 
 .barplay__navbar-btn {
@@ -74,6 +93,10 @@
     font-size: 18px;
     font-weight: 700;
     margin-right: 50px;
-    padding: 10px 20px 10px 20px;
+    padding: 5px 20px 5px 20px;
     border-radius: 5px;
+}
+
+.barplay__navbar-btn:hover {
+    cursor: pointer;
 }
