--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -96,3 +96,27 @@
 .barplay__navbar-btn:hover {
   cursor: pointer;
 }
+
+.navbar__smallscreen {
+  display: ;
+}
+
+.barplay__navbar-smallscreen_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50vh;
+  background-image: linear-gradient(#272727, black);
+  transition: 0.5 ease;
+  flex-direction: column;
+  z-index: 5;
+}
+
+.overlay__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: aliceblue;
+  color: black;
+}
