--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -226,7 +226,7 @@
 
 /* --------HambergurMenu--------- */
 
-.smallscreen-header{
+.smallscreen-header {
   position: absolute;
   left: 45%;
   font-size: 16px;
@@ -248,7 +248,6 @@
 
 /* ----mediaquarryes----- */
 
-
 @media screen and (max-width: 1300px) {
   #barplay-joensuu {
     display: none;
@@ -264,4 +263,12 @@
   .barplay__navbar-btn {
     display: none;
   }
+}
+
+@media screen and (max-width: 550px) {
+      .smallscreen-header li{
+        display: flex;
+        position: relative;
+       right: 30%;
+      }
 }
