--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -116,11 +116,10 @@
 
 .overlay__close-btn {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 0px;
+  right: 0px;
   margin: 0px;
-  width: 3rem;
-  height: 3rem;
+  padding: 0.5rem;
   background-color: aliceblue;
   color: black;
   cursor: pointer;
@@ -157,6 +156,7 @@
   justify-content: center;
   font-weight: 600;
   transition: 0.5 ease;
+  padding: 1rem;
 }
 .barplay__links-smallscreen-joensuu:hover {
   text-decoration: underline;
@@ -222,6 +222,7 @@
   margin: 2rem;
   padding: 10px 20px 10px 20px;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 /* --------HambergurMenu--------- */
