--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,10 @@
   z-index: 2;
   color: white;
   height: 3rem;
-  margin: 1rem;
+  padding: 10px;
+  font-weight: 600;
+  background-color: transparent;
+  transition: 0.5s ease;
 }
 
 .navbar_social-media ul {
@@ -252,6 +255,9 @@
 @media screen and (max-width: 1300px) {
   #barplay-joensuu {
     display: none;
+  }
+  .navbar {
+    background-color: transparent;
   }
 }
 
