--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -97,3 +97,20 @@
 #soita {
     margin-left: 11rem;
 }
+
+/* -------Ruoka listat----- */
+
+.barplay__ruoka-listat {
+    justify-content: start;
+    width: 40rem;
+    margin-left: -47px;
+
+}
+
+.barplay__ruoka-listat a {
+    position: relative;
+    left: 0.95rem;
+    border: white 2px solid;
+    background: #F5F0EB;
+    padding: 1rem 67.8px;
+}
