Revert "change text width"
This reverts commit 48320ba3387284a074a0c834b711e49c8603d7a5.

--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -47,7 +47,7 @@
 .barplay__schedule-text {
   background-color: white;
   color: #111111;
-  width: 100%;
+  width: 25rem;
   padding: 5px 2em;
 }
 
@@ -140,9 +140,7 @@
       }
       /* upper code makes the column reverse */
 
-
-      .barplay__schedule-text {
-        width: 100%;
+      .barplay__schedule-section {
 
       }
       .barplay__ruoka-listat  {
