Revert "fix some text"
This reverts commit e7c13ba6035eeb84a1a68059aa57c6af013e6546.

--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -153,8 +153,7 @@
         box-sizing: border-box;
       }
 
-      .barplay__schedule-location-text a {
-        position: relative;
-        left: 120%;
+      .barplay__schedule-location p {
+
       }
 }
