--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   position: fixed;
   z-index: 2;
   color: white;
-  height: 3rem;
+  height: 2.5rem;
   padding: 10px;
   font-weight: 600;
   background-color: transparent;
@@ -93,7 +93,7 @@
   background-color: #a62626;
   border: none;
   color: white;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 700;
   margin-right: 50px;
   padding: 5px 20px 5px 20px;
@@ -282,4 +282,10 @@
         position: relative;
        right: 30%;
       }
+      .barplay__navbar-smallscreen-links-icons a {
+        font-size: 25px;
+        margin-top: 5px;
+        margin-left: -10px;
+      }
+      .barplay__navbar-smallscreen-links-icons p {}
 }
