--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   position: fixed;
   z-index: 2;
   color: white;
-  height: 2.5rem;
+  height: 3rem;
   padding: 10px;
   font-weight: 600;
   background-color: transparent;
@@ -236,8 +236,9 @@
 
 .smallscreen-header {
   position: absolute;
+  top: 25%;
   left: 45%;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   list-style: none;
   display: flex;
@@ -250,7 +251,7 @@
 .hamburger {
   position: absolute;
   right: 2rem;
-  font-size: 35px;
+  font-size: 25px;
   cursor: pointer;
 }
 
@@ -273,6 +274,9 @@
   .navbar_social-media,
   .barplay__navbar-btn {
     display: none;
+  }
+  .navbar {
+    height: 2rem;
   }
 }
 
