--- a/src/components/Add/Add.css
+++ b/src/components/Add/Add.css
@@ -1,58 +1,79 @@
 .barplay__add {
-    color: white;
-    box-sizing: border-box;
-    margin: 0px;
-    width: 100%;
+  color: white;
+  box-sizing: border-box;
+  margin: 0px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .barplay__add h1 {
-    text-align: center;
+  text-align: center;
+  padding: 2rem;
 }
 
 .barplay__add h2 {
-    color: red;
+  color: red;
 }
 
 .add__section {
-    display: flex;
+  display: flex;
 }
 
 .add__section-1 {
-    margin: 2rem 4rem;
+  margin: 0rem 4rem;
+  margin-right: 0rem;
 }
 
 .add__section-1 img {
-    width: 75%;
+  width: 95%;
 }
 
 .add__dining-text {
-    background-color: #282828;
-    padding: 1rem;
-    width: 25rem;
-    height: 13rem;
-    position: relative;
-    left: 5%;
-    margin-top: -3rem;
+  background-color: #282828;
+  padding: 1rem;
+  width: 25rem;
+  height: 13rem;
+  position: relative;
+  left: 5%;
+  margin-top: -3rem;
 }
 
-
 .add__dining-text a {
-    color: red;
+  color: red;
 }
 
 .add__dining-text:hover {
-    background-color: black;
+  background-color: black;
 }
-
 
 /* ----- section 2 ----- */
 
+.add__section-2 {
+  width: 60rem;
+  margin-right: 4rem;
+}
+
 .add__bartender {
-    display: flex;
-    
+  display: flex;
+  border-bottom: solid white 1px;
+  border-top: solid white 1px;
 }
 
 .bartender {
-    width: 15rem;
-    height: 8rem;
+  width: 15rem;
+  height: 8rem;
+  margin-top: 1.2rem;
+}
+
+.bartender__text {
+  margin-left: 1rem;
+}
+
+/* --------markus----------- */
+
+.markus {
+  height: 9.5rem;
+  width: 15rem;
+  margin: 1rem 0rem;
 }
