--- a/src/components/Add/Add.css
+++ b/src/components/Add/Add.css
@@ -54,7 +54,7 @@
   margin-right: 4rem;
 }
 
-.add__bartender {
+.add__info {
   display: flex;
   border-bottom: solid white 1px;
   border-top: solid white 1px;
@@ -73,9 +73,41 @@
 /* --------markus----------- */
 
 .markus {
+    width: 15rem;
   height: 9.5rem;
-  width: 15rem;
   margin: 1rem 0rem;
 }
 /* ------hamburger------- */
 
+.hamburger-img {
+    margin: 1rem 0rem;
+    width: 17rem;
+    height: 11rem;
+}
+
+/* ------Responsivness ----- */
+
+@media screen and (max-width: 1250px) {
+    .add__section {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+    }
+
+    .add__info img {
+        width: 50%;
+        height: 50%;
+    }
+
+    .add__info {
+        flex-direction: column;
+        border: transparent;
+        justify-content: center;
+        align-items: center;
+    }
+
+    
+
+}
