info heder gave it 2.5rem

--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -165,4 +165,7 @@
       .barplay__info-text {
         width: 100%;
       }
+      .barplay__info-section h1 {
+        margin-left: 2.5rem;
+      }
 }
