centered the add__info

--- a/src/components/Add/Add.css
+++ b/src/components/Add/Add.css
@@ -101,13 +101,15 @@
 
   .add__info {
     flex-direction: column;
-    width: 50%;
+    justify-content: center;
+    align-items: center;
+    border-color: transparent;
 }
 
 }
 @media screen and (max-width: 915px) {
     
-    .add__info {
+    .add__dining-text {
         
     }
 }
