--- a/src/components/Add/Add.css
+++ b/src/components/Add/Add.css
@@ -107,10 +107,15 @@
 }
 @media screen and (max-width: 915px) {
   .add__dining-text {
-    left: 0%;
-    margin: 10px;
+    width: 50%;
+    left: 15%;
+    margin: 50px 20px;
+    margin-top: 30px;
+    text-align: center;
   }
   .add__section-1 {
     margin: 0px;
   }
+
+  
 }
