gave the dinner img 100% width

--- a/src/components/Add/Add.css
+++ b/src/components/Add/Add.css
@@ -108,7 +108,7 @@
 @media screen and (max-width: 915px) {
   .add__dining-text {
     width: 50%;
-    left: 15%;
+    left: 20%;
     margin: 50px 20px;
     margin-top: 30px;
     text-align: center;
@@ -117,5 +117,7 @@
     margin: 0px;
   }
 
-  
+  .add__section-1 img {
+    width: 100%;
+  }
 }
