added hover for dining text

--- a/src/components/Add/Add.css
+++ b/src/components/Add/Add.css
@@ -39,6 +39,11 @@
   margin-top: -3rem;
 }
 
+.add__dining-text:hover {
+    cursor: pointer;
+    background-color: black;
+}
+
 .add__dining-text a {
   color: red;
 }
