--- a/src/components/images/Images.css
+++ b/src/components/images/Images.css
@@ -25,3 +25,27 @@
     margin-left: 3rem;
 }
 
+@media screen and (max-width: 1285px) {
+    .card img {
+        width: 20rem;
+        height: 15rem;
+        margin-left: 1rem;
+    }
+}
+
+@media screen and (max-width:1050px) {
+    .card img {
+        width: 25rem;
+        height: 18rem;
+        margin-left: 2.3rem;
+    }
+}
+
+@media screen and (max-width:950px) {
+    .card img {
+        width: 100%;
+        height: 18rem;
+        margin-left: -0.99rem;
+        padding: 1rem;
+    }
+}
