--- a/src/components/images/Images.css
+++ b/src/components/images/Images.css
@@ -45,7 +45,12 @@
     .card img {
         width: 100%;
         height: 18rem;
-        margin-left: -0.99rem;
-        padding: 1rem;
+        margin-left: 0rem;
     }
+    .slick-slider {
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+    left: 0%;
+}
 }
