--- a/src/components/images/Images.css
+++ b/src/components/images/Images.css
@@ -44,7 +44,7 @@
 @media screen and (max-width:950px) {
     .card img {
         width: 100%;
-        height: 18rem;
+        height: 28rem;
         margin-left: 0rem;
     }
     .slick-slider {
@@ -53,4 +53,9 @@
     position: relative;
     left: 0%;
 }
+}
+@media screen and (max-width:650px) {
+    .card img {
+        height: 18rem;
+    }
 }
