--- a/src/components/Contatct/Contact.css
+++ b/src/components/Contatct/Contact.css
@@ -4,6 +4,13 @@
     
 }
 
+.yhteistiedot__info {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+    margin: 0rem 2rem;
+}
+
 .barplay__yhteistiedot h1 {
     margin-top:3rem ;
     color: white;
