--- a/src/components/Contatct/Contact.css
+++ b/src/components/Contatct/Contact.css
@@ -12,12 +12,40 @@
 }
 
 .barplay__yhteistiedot h1 {
-    margin-top:3rem ;
+    margin-top:5rem ;
+    margin-bottom: 3rem;
     color: white;
     text-align: center;
     font-weight: 700;
     font-size: 34px;
  }
 
+ .info-icon
+ {
+    font-size: 24px;
+ }
+
  /* -------palautetta------- */
+
+ .info-btn {
+    height: 4rem;
+    width: 10rem;
+    background-color:white;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 8px 28px;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
+
+ /* ----karta------ */
  
+ .info-karta li {
+    display: flex;
+    width: 10rem;
+ }
+
+  .info-karta p {
+    margin-left: 2rem;
+    margin-top: -0.2rem;
+  }
