--- a/src/components/Contatct/Contact.css
+++ b/src/components/Contatct/Contact.css
@@ -1,6 +1,7 @@
 .barplay__yhteistiedot {
     box-sizing: border-box;
     color: white;
+    background-color: black;
     
 }
 
@@ -9,10 +10,11 @@
     list-style: none;
     justify-content: space-between;
     margin: 0rem 2rem;
+    padding-bottom: 3rem;
 }
 
 .barplay__yhteistiedot h1 {
-    margin-top:5rem ;
+    padding-top:3rem ;
     margin-bottom: 3rem;
     color: white;
     text-align: center;
@@ -61,10 +63,14 @@
  }
 
   .info-karta p {
-    margin-left: 1rem;
+    margin-left: 0;
   }
 
   /* --------soita-------- */
+
+  .info-soita li{
+    display: flex;
+  }
 
   /* --------schedule------ */
 
@@ -88,3 +94,23 @@
     margin-left: 3.5rem;
 }
 
+@media screen and (max-width: 950px) {
+    .yhteistiedot__info {
+        flex-direction: column;
+    }
+
+    .info-aikataulu {
+        width: 40rem;
+    }
+    .info-btn {
+        width: 100%;
+    }
+
+
+}
+
+@media screen and (max-width: 650px) {
+    .info-aikataulu {
+        width: 90%;
+    }
+}
