--- a/src/components/Contatct/Contact.css
+++ b/src/components/Contatct/Contact.css
@@ -1,7 +1,7 @@
 .barplay__yhteistiedot {
     box-sizing: border-box;
     color: white;
-    background-color: black;
+    background-color: #111111;
     
 }
 
