Revert "Merge branch 'footer' into mai"
This reverts commit f769100cbf63812da50b17d7cad5b1c1324c7db0, reversing
changes made to 091511086fa5382fc0429e0bc6f01ed66a37ed5e.

--- a/src/components/Contatct/Contact.css
+++ b/src/components/Contatct/Contact.css
@@ -1,7 +1,7 @@
 .barplay__yhteistiedot {
     box-sizing: border-box;
     color: white;
-    background-color: #111111;
+    background-color: black;
     
 }
 
