--- a/src/components/Contatct/Contact.css
+++ b/src/components/Contatct/Contact.css
@@ -9,8 +9,8 @@
     display: flex;
     list-style: none;
     justify-content: space-between;
-    margin: 0rem 10rem;
-
+    margin: 0rem 2rem;
+    padding-bottom: 3rem;
 }
 
 .barplay__yhteistiedot h1 {
