--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -20,7 +20,7 @@
   width: 40%;
   padding: 4rem 0rem;
   position: relative;
-  top: -3rem;
+  top: -4rem;
 }
 
 .info__text {
@@ -29,7 +29,8 @@
 
 .barplay__info-section h1 {
   font-size: 30px;
-  justify-content: flex-start;
+  margin-left: 3rem;
+
 }
 
 .barplay__info-section li {
